--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "status-watcher",
+	"name": "Status Watcher",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Moves notes into folders based on 'status' metadata.",
+	"author": "Itai Ofir",
+	"authorUrl": "https://github.com/ItaiOfir",
+	"fundingUrl": "https://github.com/ItaiOfir/status-watcher",
+	"isDesktopOnly": true
 }
